# mcp-logseq-rust

./: .env.example  CLAUDE.md  Cargo.toml  README.md  anythingllm_mcp_servers.example.json  anythingllm_mcp_servers.json  build-release.sh  claude_desktop_config.example.json  test_journal_debug.sh
.claude/sessions/: .current-session  2025-08-07-1410.md  2025-08-12-1432.md
.github/workflows/: rust.yml
src/: config.rs  error.rs  logseq_client.rs  main.rs  models.rs  protocol.rs
src/protocol/: response.rs
src/tools/: builder.rs  mod.rs  mutate.rs  query.rs
