[package]
name = "mcp-logseq-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
mcpr = "0.2.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
